Thu Jun 15 10:09:03 EDT 2000 Ben Collins <bcollins@debian.org>

  * main/depcon.c: remove if() that prevented versioned deps from checking
    provides to satisfy them
  * dselect/pkgsublist.cc: Same

Tue Jun 13 22:11:22 CEST 2000 peter karlsson <peter@softwolves.pp.se>

  * po/sv.po: Updated Swedish translation

Tue Jun 13 19:23:37 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-statoverride.pl: 
    + fix two typos in the help message
    + Add code to implement --update when adding an override
  * scripts/dpkg-statoverride.8: new file
  * debian/dpkg.postinst: create statoverride file if it doesn't exist

Mon Jun 12 16:35:26 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * configure.in: generate doc/sv/Makefile as well
  * main/filesdb.c: fix logic when reading statusoverride-file
  * scripts/.cvsignore: add all the perl scripts
  * scripts/dpkg-divert.pl:
    + turn $admindir into $dpkglibdir, which the Makefile will handle
    + fix glob->regexp logic for --list
  * scripts/Makefile.in: 
    + replace one `sed' with `$(SED)'
    + add dpkg-statoverride
  * scripts/dpkg-statoverride.pl: new util to manage statoverrides
  * debian/rules: move Swedish manpages into the package as well

Fri Jun  9 15:52:28 CEST 2000 Wichert Akkerman <wakkerma@debian.org>

  * Merge things from the potato branch:
    + po/*.po: updated
    + THANKS: Add Lele Gaifax
    + configure.in: add Italian to LINGUAS
    + doc/sv: new directory with Swedish manpages
    + doc/*: removed "GNU/Linux" since this runs on HURD as well
    + doc/ja/update-alternatives.8: new version
    + dpkg-deb/main.c: remove preprocessor define from gettextized string
    + dselect/main.c: remove preprocessor define from gettextized string
    + lib/showcright.c: remove preprocessor define from gettextized string
    + main/enquiry.c: can't use prepocessor defines in a gettextized string
    + dselect/pkgdisplay.cc: Replace empty string for eflags with a space