@@ -15,12 +15,10 @@ dpkg
 * allow external program to specify how to handle conffiles
 * log our actions
 * try to remove directories again after removing conffiles
-* allow versioned provides
 * verify Enhances works (ie don't trigger some assertion)
 
 dselect:
 * support Enhances (GNU/FSF)
-* allow versioned provides
 * toggle for searching through descriptions
 
 dpkg-source
