@@ -37,7 +37,7 @@ $(BUILD)/config.status:
 
 clean:
 	$(checkdir)
-	$(MAKE) $(MFLAGS) -C $(BUILD) distclean
+	-$(MAKE) $(MFLAGS) -C $(BUILD) distclean
 	rm -f debian/files debian/substvars
 	rm -f debian/dpkg.substvars
 	rm -fr $(BUILD) $(TMP) $(TMP_DPKG) $(TMP_DPKG_DEV) $(TMP_DPKG_DOC)
