@@ -1,3 +1,13 @@
+Thu Jun 15 13:41:28 CEST 2000 Wichert Akkerman <wakkerma@debian.org>
+
+  * lib/parse.c: add Enhances to fieldinfos[]
+  * lib/fields.c:
+    + initialize dop->backrev as well when creating new dependency
+    + only allow exact version relations when dealing with provides
+  * TODO: remove versioned provides
+  * debian/rules: don't fail of make clean fails (which happens on a
+    cvsclean tree)
+
 Thu Jun 15 10:09:03 EDT 2000 Ben Collins <bcollins@debian.org>
 
   * main/depcon.c: remove if() that prevented versioned deps from checking
